# crabpol

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
crabpol/: __init__.py  aperture_photometry.py  gettod.py  ixpe_filter_events.py  ixpe_instrument.py  ixpe_utils.py  libmadam_mapmaker.py  mapmaker.py  npipe_utils.py  planck_colour_correction.py  ring_jacknife_100GHz.py
examples/: example_get_npipe_tod.py  example_npipe_make_map.py
tau-A/: gettod.py  test_gettod.py
tauA/: mapmaker.py
tests/: test_gettod.py
