[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "crabpol"
version = "0.1.0"
description = "A Python package for analysis of NPIPE TOD and IXPE observations of the Crab nebula (also known as Tau-A or M1)."
authors = [
    { name = "Vyoma Muralidhara", email = "vyoma1993@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "healpy"
]
requires-python = ">=3.8"
classifiers=[
        'Programming Language :: Python :: 3',
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        'Operating System :: OS Independent',
    ]
[project.urls]
"Repository" = "https://github.com/Vyoma-M/crabpol"
[tool.black]
target-versions = ["py39", "py310", "py311"]
line-length = 88
[tool.pytest.ini_options]
testpaths = ["tests"]
